@startuml

title __COMPILER's Class Diagram__\n

  package org.mdkt.compiler {
    class CompilationException {
        {static} - serialVersionUID : long
        + CompilationException()
    }
  }
  

  package org.mdkt.compiler {
    class CompiledCode {
        - baos : ByteArrayOutputStream
        - className : String
        + CompiledCode()
        + getClassName()
        + openOutputStream()
        + getByteCode()
    }
  }
  

  package org.mdkt.compiler {
    class DynamicClassLoader {
        - customCompiledCode : Map<String, CompiledCode>
        + DynamicClassLoader()
        + addCode()
        # findClass()
        + getCustomCompiledCode()
    }
  }
  

  package org.mdkt.compiler {
    class ExtendedStandardJavaFileManager {
        - compiledCode : List<CompiledCode>
        # ExtendedStandardJavaFileManager()
        + getJavaFileForOutput()
        + getClassLoader()
    }
  }
  

  package org.mdkt.compiler {
    class InMemoryJavaCompiler {
        ~ ignoreWarnings : boolean
        - javac : JavaCompiler
        - options : Iterable<String>
        - sourceCodes : Map<String, SourceCode>
        - InMemoryJavaCompiler()
        {static} + newInstance()
        + useParentClassLoader()
        + getClassloader()
        + useOptions()
        + ignoreWarnings()
        + compileAll()
        + compile()
        + addSource()
        + compileAllToRawBytes()
        + compileToRawBytes()
    }
  }
  

  package org.mdkt.compiler {
    class SourceCode {
        - contents : String
        - className : String
        + SourceCode()
        + getClassName()
        + getCharContent()
    }
  }
  

  CompiledCode -up-|> SimpleJavaFileObject
  ExtendedStandardJavaFileManager -up-|> ForwardingJavaFileManager
  ExtendedStandardJavaFileManager o-- DynamicClassLoader : cl
  InMemoryJavaCompiler o-- DynamicClassLoader : classLoader
  SourceCode -up-|> SimpleJavaFileObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
